# all-in-one-live

./: README.md  components.d.ts  live.db  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
VLC/: vlc-protocol-deregister.bat  vlc-protocol-register.bat  说明.txt
src/: App.vue  main.ts
src-tauri/: .env  .gitignore  Cargo.toml  live.db  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/common/: Cargo.toml
src-tauri/common/src/: lib.rs
src-tauri/huya/: Cargo.toml
src-tauri/huya/src/: lib.rs
src-tauri/src/: common.rs  crud.rs  huya.rs  live.db  main.rs  model.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/mapper/: live_info_mapper.rs  mod.rs
src-tauri/src/domain/mapper/html_mapper/: live_info_mapper.html
src-tauri/src/domain/table/: live_info.rs  mod.rs
src-tauri/src/live/: mod.rs
src-tauri/src/rest_tool/: mod.rs
src/libs/: copy.ts  type.ts
src/router/: index.ts
src/router/routes/: index.ts
src/stores/: main.ts
src/views/: Bilibili.vue  Favorite.vue  Huya.vue
