[package]
name = "all_in_one_live"
version = "0.1.4"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha.0", features = ["api-all"] }
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "1.21.0", features = ["full"] }
base64 = "0.13.0"
# logging(option)
log = "0.4.17"
fast_log = "1.5.36"
rbs = { version = "0.1.11"}
rbatis = { version = "4.0.35"}
# choose one rbdc drivier
rbdc-sqlite = { version = "0.1.13" }
rbdc = "0.1.21"
once_cell = "1.14.0"
# common
common = { path = "./common" }
# async-trait
async-trait = "0.1.57"
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
