[package]
name = "huya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
base64 = "0.13.0"
chrono = "0.4.19"
percent-encoding = "2.2.0"
md5 = "0.7.0"
hex = "0.4.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.6.0"